--- a/resources/elasticsearch/elasticsearch_primary.yml
+++ b/resources/elasticsearch/elasticsearch_primary.yml
@@ -1,6 +1,6 @@
 cluster.name: active-data
 node.zone: primary
-node.name: primary
+node.name: 1
 node.master: false
 node.data: true
 
@@ -8,7 +8,6 @@ script.inline: on
 script.indexed: on
 
 cluster.routing.allocation.enable: none
-cluster.routing.allocation.awareness.force.zone.values: primary,secondary,spot
 cluster.routing.allocation.awareness.attributes: zone
 cluster.routing.allocation.cluster_concurrent_rebalance: 1
 cluster.routing.allocation.node_concurrent_recoveries: 1
